--- a/.github/workflows/myproject.yml
+++ b/.github/workflows/myproject.yml
@@ -27,4 +27,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: simplecloudquestions/example_docker:latest
+          tags: cypaul85/example_docker:latest
